--- a/static/style.css
+++ b/static/style.css
@@ -34,13 +34,17 @@ body {
 nav {width: 100px;margin: 0;position: fixed;z-index: 99999;top: 50px;}
 nav ul {list-style: none;padding: 0;margin-left: 0px;position: fixed;}
 nav ul a {text-decoration: none;}
-nav ul li {background-color: rgb(255, 240, 240);color:rgb(178, 176, 176);width: 50px;height: 20px;margin-bottom: 10px;padding-left: 5px;font-size:16px;box-shadow: -2px 4px 7px #888888;text-align: center;line-height: 19px;border-radius: 0 20px 20px 0;
+nav ul li {background-color: rgb(255, 240, 240);color:rgb(178, 176, 176);width: 50px;height: 20px;margin-bottom: 10px;padding-left: 5px;font-size:16px;box-shadow: -4px 3px 10px #B8B8B8;text-align: center;line-height: 19px;border-radius: 0 20px 20px 0;
+	border:1px solid white;
   	-webkit-transition: 0.2s ease-in-out all;
   	-moz-transition: 0.2s ease-in-out all;
   	-o-transition: 0.2s ease-in-out all;
   	transition: 0.2s ease-in-out all;
 }
-nav ul li:hover,nav ul .highlight {background-color: white;color:rgb(255, 173, 173);width: 70px;height: 20px;font-size: 20px;line-height: 22px;
+nav ul li:hover,nav ul .highlight {background-color: white;color:rgb(255, 173, 173);width: 70px;height: 20px;
+	font-size: 20px;
+	line-height: 19px;
+	border:1px solid rgb(255, 173, 173);
 	-webkit-transition: 0.2s ease-in-out all;
   	-moz-transition: 0.1s ease-in-out all;
   	-o-transition: 0.1s ease-in-out all;
