修改百度小图隐藏方式
修改百度小图隐藏方式

--- a/static/style.css
+++ b/static/style.css
@@ -216,6 +216,6 @@ nav ul li:hover,nav ul .highlight {background-color: white;color:rgb(255, 173, 1
 	font-size: 40px;
 	position: absolute;
 }
-a img [src="http://eiv.baidu.com/hmt/icon/21.gif"] {
+a img[width="20"] {
 	display:none;
 }
